improved index; modified README

--- a/sections/初等概率论.tex
+++ b/sections/初等概率论.tex
@@ -343,7 +343,7 @@ Motivation: defining events is troublesome, and unhelpful to extract the key fea
                 f_X(x)=\frac{\mathrm{d}F_X(x)}{\mathrm{d}x}
             \end{equation}}
         \end{center}
-        \item Right-Continuity of CDF: A physical perspective is that PMF could be written as 
+        \item Right-Continuity of CDF: A physical perspective is that PMF could be written as\footnote{Definition of Dirac $ \delta  $ function see \autoref{SubSubSectionFourierAndConvolution}.} 
         \begin{align}
             p_X(x)=\sum_{\tilde{x}\in\mathcal{X}}\mathbb{P}\left( X=\tilde{x} \right) \delta (x-\tilde{x})
         \end{align}
