--- a/sections/生物统计学概论.tex
+++ b/sections/生物统计学概论.tex
@@ -19,7 +19,7 @@ To compare groups, e.g. to determine whether there is significant difference bet
     Response $ Y $ is denoted by its subsript to declare its group and index in this group, e.g. $ Y_{ijkl} $ indicates it is the $ l^\mathrm{th}  $ sample in group $ (i,j,k) $
 
 \subsubsection{Single Factor Model and One-Way ANOVA}
-\index{Factor Model!Single Factor Model}
+% \index{Factor Model!Single Factor Model}
 
 \begin{point}
     Cell Mean Model
