--- a/sections/统计计算与软件.tex
+++ b/sections/统计计算与软件.tex
@@ -2953,7 +2953,7 @@ Markov Chain Monte Carlo (MCMC) aims at solving integration and simulation probl
         =&P^n
     \end{align}
 
-    \textbf{Stationary Distribution} / equilibrium distribution / invariant distribution $ \pi_\infty $ of a markov satisfies\index{Stationary Distribution}\index{Equilibrium Distribution}\index{Invariant Distribution}
+    \textbf{Stationary Distribution}\index{Stationary Distribution} / equilibrium distribution / invariant distribution $ \pi_\infty $ of a markov satisfies\index{Stationary Distribution}\index{Equilibrium}\index{Invariant Distribution}
     \begin{align}
          \pi_\infty=\pi_\infty P=\pi_{\infty}P^n
     \end{align}
@@ -2999,7 +2999,7 @@ Markov Chain Monte Carlo (MCMC) aims at solving integration and simulation probl
 
 
 \begin{itemize}[topsep=2pt,itemsep=0pt]
-    \item Metropolis-Hastings Algorithm:\index{Metropolis-Hastings Algorithm}\index{M-H Algorithm}
+    \item Metropolis-Hastings Algorithm:\index{M-H Algorithm (Metropolis-Hastings Algorithm)}
     \begin{algorithm}{MCMC}
     \begin{enumerate}[topsep=2pt,itemsep=2pt]
         \item A pre-selected conditional distribution $ q(\cdot|x) $ is used as \textbf{proposal distribution}\index{Proposal Distribution}. In each step $ t $, a new state is proposed as 
